--- a/index.html
+++ b/index.html
@@ -34,14 +34,8 @@
             <h1 class="w3-center w3-text-grey"><b>Prajakta & Ajinkya</b></h1>
             <img src="./web_contents/2.jpg"
                 style="width:60%;margin:32px auto; display: flex; align-items: center;justify-items: center;">
-            <p><i>You all know us. And we all know you. We are getting married lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur
-                    sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.</i>
+            <p style="text-align: center;"><b style="font-size: 20px; ]">When you realise you want to spend the rest of your life with someone, you want it to start as soon as possible.
+                Taking their first step to eternity, join us to celebrate this special bond.</b>
             </p><br>
             <p class="w3-center"><a href="#wedding" class="w3-button w3-black w3-round w3-padding-large w3-large"
                     id="button">Wedding Details</a></p>
